force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__ActivityTimeOffset__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActivityTimeOffset__c</fullName>
    <label>Activity Time Offset</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActivityTimeOffset</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>