force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__ActivityTimingUsageType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActivityTimingUsageType__c</fullName>
    <label>Activity Timing Usage Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActivityTimingUsageType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>