force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__CountInPeriodNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__CountInPeriodNumber__c</fullName>
    <label>CountIn Period</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CountInPeriodNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>