force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__MaxActivityCountPerRepetitionQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaxActivityCountPerRepetitionQuantity__c</fullName>
    <label>Max Activity Count Per Repetition</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaxActivityCountPerRepetitionQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>