force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__MaxInPeriodCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaxInPeriodCount__c</fullName>
    <label>Max In Period Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaxInPeriodCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>