force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__MaxRepetitionCycleLengthNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaxRepetitionCycleLengthNumber__c</fullName>
    <label>Max Repetition Cycle Length</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaxRepetitionCycleLengthNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>