force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__PeriodLengthNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PeriodLengthNumber__c</fullName>
    <label>Period Length</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PeriodLengthNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>