force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__PeriodLengthUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PeriodLengthUOMId__c</fullName>
    <label>Period Length Unit</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PeriodLengthUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>