force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__rel_1716726408979_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726408979_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActivityTiming_TimingCodeId_map_Code_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>ActivityTiming_TimingCodeId_map_Code_rel</relationshipLabel>
    <relationshipName>rel_1716726408979_end</relationshipName>
    <type>Lookup</type>
</CustomField>