force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__rel_1720282902951_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720282902951_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActivityTiming_PeriodLengthUOMId_map_rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>ActivityTiming_PeriodLengthUOMId_map_rel</relationshipLabel>
    <relationshipName>rel_1720282902951_end</relationshipName>
    <type>Lookup</type>
</CustomField>