force-app/main/default/objects/ssot__ActivityTiming__dlm/fields/ssot__TimingCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimingCodeId__c</fullName>
    <label>Timing Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimingCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>